--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
-dependencies = ["numpy>=1.19,<1.26"]
+dependencies = ["numpy>=1.19,<1.26", "pydantic>=2,<3"]
 dynamic = ["version"]
 
 [project.optional-dependencies]
